--- a/consumer_plus/Dockerfile
+++ b/consumer_plus/Dockerfile
@@ -1,1 +1,7 @@
-FROM alpine:3.12
+FROM python:3.8-slim
+WORKDIR /var/www
+COPY consumer_plus/task_queue.py .
+COPY consumer_plus/tasks.py .
+COPY consumer_plus/requirements.txt .
+RUN pip install -r requirements.txt
+ENTRYPOINT ["python", "tasks.py"]
